--- a/data_provider/src/pyproject.toml
+++ b/data_provider/src/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "uvicorn (>=0.34.0,<0.35.0)",
     "fastapi (>=0.115.8,<0.116.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
-    "greenlet (>=3.1.1,<4.0.0)"
+    "greenlet (>=3.1.1,<4.0.0)",
+    "pytest (>=8.3.4,<9.0.0)",
+    "pre-commit (>=4.1.0,<5.0.0)"
 ]
 
 
