--- a/dashboard_service/src/pyproject.toml
+++ b/dashboard_service/src/pyproject.toml
@@ -11,7 +11,10 @@ dependencies = [
     "fastapi (>=0.115.8,<0.116.0)",
     "uvicorn (>=0.34.0,<0.35.0)",
     "pytest (>=8.3.4,<9.0.0)",
-    "pre-commit (>=4.1.0,<5.0.0)"
+    "pre-commit (>=4.1.0,<5.0.0)",
+    "pandas (>=2.2.3,<3.0.0)",
+    "httpx (>=0.28.1,<0.29.0)",
+    "alembic (>=1.14.1,<2.0.0)"
 ]
 
 
