--- a/dashboard_service/Dockerfile
+++ b/dashboard_service/Dockerfile
@@ -38,4 +38,4 @@ COPY --chown=appuser:appuser ./src /app/src
 
 ENV PYTHONPATH=/app
 
-CMD ["poetry", "run", "uvicorn", "src.app.main:app", "--host", "0.0.0.0", "--port", "8001", "--reload"]
+CMD ["poetry", "run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001", "--reload"]
